--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     .hf-brand img { height:auto; max-height:inherit; }
     .hf-nav { display:flex; gap:var(--gap,16px); flex-wrap:wrap; width:100%; }
     .hf-nav a { color:inherit; text-decoration:none; border-radius:6px; padding:0 2px; }
-    .hf-copy { font-size:12px; display:flex; width:100%; }
+    /* 以前: .hf-copy { font-size:12px; } を削除（バー/個別サイズで制御） */
+    .hf-copy { display:flex; width:100%; }
 
     @media (max-width: 640px) {
       .hfbar.hf-row { flex-wrap:wrap; }
@@ -62,33 +63,39 @@
     const isUrl = (s) => /^(https?:\/\/|\/)/.test(s || "");
     const bgOf = (d) => (d.bg_gradient && d.bg_gradient.trim()) ? d.bg_gradient : (d.bg_color || "#0f172a");
     const safeBarHeight = (v, fallback) => { const n = Number(v); return Number.isFinite(n) && n > 0 ? n : fallback; };
+    const num = (v, f) => { const n = Number(v); return Number.isFinite(n) && n > 0 ? n : f; };
 
-    // ---- Builders (same logic as admin preview) ----
+    // ---- Builders (per-element font-sizes) ----
     function headerHTML(d, menus) {
       const items = (menus || [])
         .filter(m => m.is_active && m.show_in_header)
         .map(m => `<a href="${m.href || '#'}">${m.title}</a>`)
         .join("");
 
+      // 新: 社名とナビで別フォントサイズ
+      const companyFs = num(d.header_company_size, num(d.font_size, 14));
+      const navFs     = num(d.header_nav_size,     num(d.font_size, 14));
+
       const brandInner = `
         ${isUrl(d.logo_url) ? `<img src="${d.logo_url}" alt="logo" onerror="this.style.display='none'" style="max-height:${safeBarHeight(d.logo_height || d.bar_height, 60)}px">` : ""}
-        <span style="color:${d.company_color};font-weight:${d.company_weight}">${d.company_name || ""}</span>
+        <span style="color:${d.company_color};font-weight:${d.company_weight};font-size:${companyFs}px">${d.company_name || ""}</span>
       `;
 
       const brandWrap = `<div class="slot brand" style="justify-content:${toJustify(d.company_alignment)}">
         <div class="hf-brand">${brandInner}</div>
       </div>`;
 
-      const nav = `<nav class="hf-nav" style="color:${d.nav_color};font-weight:${d.nav_weight};justify-content:${toJustify(d.nav_alignment)}">${items}</nav>`;
+      const nav = `<nav class="hf-nav" style="color:${d.nav_color};font-weight:${d.nav_weight};justify-content:${toJustify(d.nav_alignment)};font-size:${navFs}px">${items}</nav>`;
       const navWrap = `<div class="slot nav" style="justify-content:${toJustify(d.nav_alignment)}">${nav}</div>`;
 
       const cls = d.layout_mode === "column" ? "hfbar hf-column" : "hfbar hf-row";
-      const fs = Number(d.font_size) || 14;
+      // バー自体の font-size は意味を薄める（後方互換用に残すが要素で上書き）
+      const barFs = num(d.font_size, 14);
       const h  = safeBarHeight(d.bar_height, 60);
       const pad = d.padding || "8px 12px";
-      const gap = Number(d.link_spacing) || 16;
+      const gap = num(d.link_spacing, 16);
 
-      return `<div class="${cls}" style="background:${bgOf(d)};font-size:${fs}px;height:${h}px;padding:${pad};--gap:${gap}px">
+      return `<div class="${cls}" style="background:${bgOf(d)};font-size:${barFs}px;height:${h}px;padding:${pad};--gap:${gap}px">
         ${brandWrap}${navWrap}
       </div>`;
     }
@@ -99,8 +106,12 @@
         .map(m => `<a href="${m.href || '#'}">${m.title}</a>`)
         .join("");
 
-      const nav = `<nav class="hf-nav" style="color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};justify-content:${toJustify(d.nav_alignment_footer)}">${items}</nav>`;
-      const copy = `<div class="hf-copy" style="color:${d.footer_color};font-weight:${d.footer_weight || 'normal'};justify-content:${toJustify(d.footer_alignment)}">${d.footer_text || ""}</div>`;
+      // 新: コピーライトとナビで別フォントサイズ
+      const copyFs = num(d.footer_copy_size, num(d.font_size, 14));
+      const navFs  = num(d.footer_nav_size,  num(d.font_size, 14));
+
+      const nav = `<nav class="hf-nav" style="color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};justify-content:${toJustify(d.nav_alignment_footer)};font-size:${navFs}px">${items}</nav>`;
+      const copy = `<div class="hf-copy" style="color:${d.footer_color};font-weight:${d.footer_weight || 'normal'};justify-content:${toJustify(d.footer_alignment)};font-size:${copyFs}px">${d.footer_text || ""}</div>`;
 
       let inner = "";
       if (d.layout_mode === "row") inner = `${copy}${nav}`;
@@ -108,13 +119,13 @@
       else inner = `${copy}${nav}`;
 
       const cls = d.layout_mode === "row" ? "hfbar hf-row" : "hfbar hf-column";
-      const fs = Number(d.font_size) || 14;
+      const barFs = num(d.font_size, 14); // 後方互換
       const h  = safeBarHeight(d.bar_height, 60);
       const pad = d.padding || "8px 12px";
-      const gap = Number(d.link_spacing) || 16;
+      const gap = num(d.link_spacing, 16);
       const sticky = d.footer_fixed ? "position:sticky;bottom:0;z-index:10;" : "";
 
-      return `<div class="${cls}" style="${sticky}background:${bgOf(d)};font-size:${fs}px;height:${h}px;padding:${pad};--gap:${gap}px">
+      return `<div class="${cls}" style="${sticky}background:${bgOf(d)};font-size:${barFs}px;height:${h}px;padding:${pad};--gap:${gap}px">
         ${inner}
       </div>`;
     }
