--- a/admin-hf-setting.html
+++ b/admin-hf-setting.html
@@ -1,41 +1,34 @@
-<!-- admin-hf-setting 完全版 (per-element font sizes) -->
+<!-- admin-hf-setting 完全版（フォント＆固定ヘッダー対応・body+scriptのみ） -->
 <style>
-  /* Layout scope */
-  #hf-app { box-sizing:border-box; width:100%; margin:0; padding:16px; font-family:system-ui,-apple-system,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans JP','Hiragino Kaku Gothic ProN',Meiryo,sans-serif; color:#0f172a; }
-  #hf-app h1 { font-size:20px; margin:0 0 16px 0; }
-  #hf-app .card { background:#fff; border-radius:12px; box-shadow:0 2px 6px rgba(0,0,0,.08); padding:16px; margin:0 0 16px 0; }
-  #hf-app .panel-head { display:flex; justify-content:space-between; align-items:center; margin-bottom:12px; gap:8px; flex-wrap:wrap; }
-  #hf-app .panel-head h2 { font-size:16px; margin:0; }
-  #hf-app .btn { padding:6px 12px; border:none; border-radius:8px; cursor:pointer; font-size:13px; }
-  #hf-app .btn.primary { background:#2563eb; color:#fff; }
-  #hf-app .btn.small { font-size:12px; padding:2px 8px; margin-left:8px; }
-
-  /* Grouped controls: 横並びカード */
-  #hf-app .groups { display:flex; gap:12px; flex-wrap:wrap; }
-  #hf-app fieldset.group { flex:1; min-width:280px; border:1px solid #e2e8f0; border-radius:10px; padding:10px; }
-  #hf-app legend { font-size:12px; padding:0 6px; color:#334155; }
-  #hf-app .field { display:flex; align-items:center; justify-content:space-between; gap:8px; margin:6px 0; }
-  #hf-app .field label { flex:0 0 42%; font-size:12px; color:#475569; }
-  #hf-app .field input, #hf-app .field select { flex:1; max-width:100%; box-sizing:border-box; padding:6px; border:1px solid #cbd5e1; border-radius:8px; font-size:13px; }
-
-  /* Preview */
-  #hf-app .preview { border:1px dashed #cbd5e1; border-radius:10px; padding:12px; margin-bottom:12px; background:#f8fafc; }
-  #hf-app .hfbar { display:flex; align-items:center; gap:var(--gap,16px); border-radius:8px; }
-  #hf-app .hfbar.hf-row { justify-content:flex-start; }
-  #hf-app .hfbar.hf-column { flex-direction:column; align-items:stretch; }
-  #hf-app .slot { display:flex; align-items:center; }
-  #hf-app .slot.brand { flex:0 0 auto; }
-  #hf-app .slot.nav { flex:1 1 auto; }
-  #hf-app .hf-brand { display:flex; align-items:center; gap:8px; }
-  #hf-app .hf-brand img { height:auto; max-height:inherit; }
-  #hf-app .hf-nav { display:flex; gap:var(--gap,16px); flex-wrap:wrap; width:100%; }
-  /* 固定の12pxは撤去。コピーライトのサイズはUI/値で制御 */
-  #hf-app .hf-copy { display:flex; width:100%; }
-
-  /* Toast */
-  #hf-app #toast { position:fixed; top:16px; right:16px; z-index:1000; }
-  #hf-app .toast { background:#2563eb; color:#fff; padding:8px 12px; border-radius:10px; margin-top:10px; font-size:13px; box-shadow:0 2px 6px rgba(0,0,0,.2); opacity:.97; }
-  #hf-app .toast.err { background:#dc2626; }
+  #hf-app{box-sizing:border-box;width:100%;margin:0;padding:16px;font-family:system-ui,-apple-system,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans JP','Hiragino Kaku Gothic ProN',Meiryo,sans-serif;color:#0f172a}
+  #hf-app h1{font-size:20px;margin:0 0 16px}
+  #hf-app .card{background:#fff;border-radius:12px;box-shadow:0 2px 6px rgba(0,0,0,.08);padding:16px;margin:0 0 16px}
+  #hf-app .panel-head{display:flex;justify-content:space-between;align-items:center;margin-bottom:12px;gap:8px;flex-wrap:wrap}
+  #hf-app .panel-head h2{font-size:16px;margin:0}
+  #hf-app .btn{padding:6px 12px;border:none;border-radius:8px;cursor:pointer;font-size:13px}
+  #hf-app .btn.primary{background:#2563eb;color:#fff}
+  #hf-app .btn.small{font-size:12px;padding:2px 8px;margin-left:8px}
+  #hf-app .groups{display:flex;gap:12px;flex-wrap:wrap}
+  #hf-app fieldset.group{flex:1;min-width:280px;border:1px solid #e2e8f0;border-radius:10px;padding:10px}
+  #hf-app legend{font-size:12px;padding:0 6px;color:#334155}
+  #hf-app .field{display:flex;align-items:center;justify-content:space-between;gap:8px;margin:6px 0}
+  #hf-app .field label{flex:0 0 42%;font-size:12px;color:#475569}
+  #hf-app .field input,#hf-app .field select{flex:1;max-width:100%;box-sizing:border-box;padding:6px;border:1px solid #cbd5e1;border-radius:8px;font-size:13px}
+  #hf-app .hint{font-size:11px;color:#64748b;margin-top:4px}
+  #hf-app .preview{border:1px dashed #cbd5e1;border-radius:10px;padding:12px;margin-bottom:12px;background:#f8fafc}
+  #hf-app .hfbar{display:flex;align-items:center;gap:var(--gap,16px);border-radius:8px}
+  #hf-app .hfbar.hf-row{justify-content:flex-start}
+  #hf-app .hfbar.hf-column{flex-direction:column;align-items:stretch}
+  #hf-app .slot{display:flex;align-items:center}
+  #hf-app .slot.brand{flex:0 0 auto}
+  #hf-app .slot.nav{flex:1 1 auto}
+  #hf-app .hf-brand{display:flex;align-items:center;gap:8px}
+  #hf-app .hf-brand img{height:auto;max-height:inherit}
+  #hf-app .hf-nav{display:flex;gap:var(--gap,16px);flex-wrap:wrap;width:100%}
+  #hf-app .hf-copy{display:flex;width:100%}
+  #hf-app #toast{position:fixed;top:16px;right:16px;z-index:1000}
+  #hf-app .toast{background:#2563eb;color:#fff;padding:8px 12px;border-radius:10px;margin-top:10px;font-size:13px;box-shadow:0 2px 6px rgba(0,0,0,.2);opacity:.97}
+  #hf-app .toast.err{background:#dc2626}
 </style>
 
 <div id="hf-app">
@@ -45,12 +38,15 @@
   <section class="card" id="section-header">
     <div class="panel-head">
       <h2>ヘッダー設定</h2>
-      <div class="actions">
-        <label class="inline">行レイアウト
+      <div class="actions" style="display:flex;gap:8px;align-items:center">
+        <label>行レイアウト
           <select id="header_layout_mode">
             <option value="row">1行（横並び）</option>
             <option value="column">2行（縦並び）</option>
           </select>
+        </label>
+        <label style="display:flex;gap:6px;align-items:center">
+          <input id="header_fixed" type="checkbox"> 上部に固定（常時表示）
         </label>
         <button id="saveHeader" class="btn primary" type="button">保存</button>
       </div>
@@ -69,7 +65,7 @@
         <div class="field"><label>位置</label><select id="company_alignment"><option>left</option><option>center</option><option>right</option></select></div>
         <div class="field"><label>文字色</label><input id="company_color" type="color"></div>
         <div class="field"><label>太さ</label><select id="company_weight"><option>normal</option><option>bold</option></select></div>
-        <div class="field"><label>文字サイズ(px)</label><input id="header_company_size" type="number" min="8" step="1" placeholder="14"></div>
+        <div class="field"><label>文字サイズ(px)</label><input id="header_company_size" type="number" min="8" step="1" placeholder="18"></div>
       </fieldset>
 
       <fieldset class="group"><legend>ナビ</legend>
@@ -80,6 +76,7 @@
       </fieldset>
 
       <fieldset class="group"><legend>全体</legend>
+        <div class="field"><label>フォントファミリー</label><input id="header_font_family" type="text" placeholder='"Noto Sans JP", Meiryo, sans-serif'><div class="hint">例: "Noto Sans JP", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif</div></div>
         <div class="field"><label>ヘッダー高さ(px)</label><input id="bar_height_header" type="number" min="0" step="1" placeholder="60"></div>
         <div class="field"><label>パディング</label><input id="padding_header" type="text" placeholder="8px 12px"></div>
         <div class="field"><label>リンク間隔</label><input id="link_spacing_header" type="number" min="0" step="1" placeholder="16"></div>
@@ -92,7 +89,7 @@
           </select></div>
         <div class="field"><label>開始色</label><input id="grad_start_header" type="color" value="#000000"></div>
         <div class="field"><label>終了色</label><input id="grad_end_header" type="color" value="#333333"></div>
-        <div class="field"><label>操作</label><div style="display:flex;gap:8px;">
+        <div class="field"><label>操作</label><div style="display:flex;gap:8px">
           <button id="grad_apply_header" class="btn small" type="button">生成</button>
           <button id="grad_reset_header" class="btn small" type="button">リセット</button>
         </div></div>
@@ -104,8 +101,8 @@
   <section class="card" id="section-footer">
     <div class="panel-head">
       <h2>フッター設定</h2>
-      <div class="actions">
-        <label class="inline">行レイアウト
+      <div class="actions" style="display:flex;gap:8px;align-items:center">
+        <label>行レイアウト
           <select id="footer_layout_mode">
             <option value="row">横並び</option>
             <option value="nav-top">コピー上／ナビ下</option>
@@ -130,11 +127,12 @@
         <div class="field"><label>位置</label><select id="nav_alignment_footer"><option>left</option><option>center</option><option>right</option></select></div>
         <div class="field"><label>文字色</label><input id="nav_color_footer" type="color"></div>
         <div class="field"><label>太さ</label><select id="nav_weight_footer"><option>normal</option><option>bold</option></select></div>
-        <div class="field"><label>固定表示</label><input id="footer_fixed" type="checkbox"></div>
+        <div class="field"><label>固定表示（常時最下部）</label><input id="footer_fixed" type="checkbox"></div>
         <div class="field"><label>文字サイズ(px)</label><input id="footer_nav_size" type="number" min="8" step="1" placeholder="14"></div>
       </fieldset>
 
       <fieldset class="group"><legend>全体</legend>
+        <div class="field"><label>フォントファミリー</label><input id="footer_font_family" type="text" placeholder='"Noto Sans JP", Meiryo, sans-serif'><div class="hint">例: "Noto Sans JP", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif</div></div>
         <div class="field"><label>フッター高さ(px)</label><input id="bar_height_footer" type="number" min="0" step="1" placeholder="60"></div>
         <div class="field"><label>パディング</label><input id="padding_footer" type="text" placeholder="8px 12px"></div>
         <div class="field"><label>リンク間隔</label><input id="link_spacing_footer" type="number" min="0" step="1" placeholder="16"></div>
@@ -147,13 +145,19 @@
           </select></div>
         <div class="field"><label>開始色</label><input id="grad_start_footer" type="color" value="#000000"></div>
         <div class="field"><label>終了色</label><input id="grad_end_footer" type="color" value="#333333"></div>
-        <div class="field"><label>操作</label><div style="display:flex;gap:8px;">
+        <div class="field"><label>操作</label><div style="display:flex;gap:8px">
           <button id="grad_apply_footer" class="btn small" type="button">生成</button>
           <button id="grad_reset_footer" class="btn small" type="button">リセット</button>
         </div></div>
       </fieldset>
     </div>
   </section>
+
+  <div class="card" style="background:#f8fafc">
+    <strong>フォント指定のヒント</strong>
+    <div class="hint">ここに指定したフォントは、そのフォントが端末に入っているか、ページでWebフォントを読み込んでいる場合に表示されます。未インストールの場合は後ろに書いたフォールバックが使われます。</div>
+    <div class="hint">例：<code>"Noto Sans JP", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif</code></div>
+  </div>
 
   <div id="toast"></div>
 </div>
@@ -206,8 +210,10 @@
   function headerHTML(d){
     const items = menus.filter(m=>m.is_active && m.show_in_header).map(m=>`<a href="${m.href||'#'}">${m.title}</a>`).join("");
     const bg = (d.bg_gradient && d.bg_gradient.trim()) ? d.bg_gradient : (d.bg_color || "#0f172a");
-    const companyFs = num(d.header_company_size, 14);
+    const companyFs = num(d.header_company_size, 18);
     const navFs = num(d.header_nav_size, 14);
+    const fixed = d.header_fixed ? "position:sticky;top:0;z-index:5;" : ""; /* プレビューはstickyで雰囲気のみ */
+    const ff = d.header_font_family ? `font-family:${d.header_font_family};` : "";
 
     const brand = `
       <div class="hf-brand">
@@ -219,8 +225,8 @@
     const navWrap = `<div class="slot nav" style="justify-content:${toJustify(d.nav_alignment)}">${nav}</div>`;
 
     const cls = d.layout_mode === "column" ? "hfbar hf-column" : "hfbar hf-row";
-    return `<div class="${cls}" style="background:${bg};height:${num(d.bar_height,60)}px;padding:${d.padding||'8px'};--gap:${num(d.link_spacing,16)}px">
-      ${d.layout_mode === "column" ? `${brandWrap}${navWrap}` : `${brandWrap}${navWrap}`}
+    return `<div class="${cls}" style="${fixed}${ff}background:${bg};height:${num(d.bar_height,60)}px;padding:${d.padding||'8px 12px'};--gap:${num(d.link_spacing,16)}px">
+      ${brandWrap}${navWrap}
     </div>`;
   }
 
@@ -229,6 +235,7 @@
     const bg = (d.bg_gradient && d.bg_gradient.trim()) ? d.bg_gradient : (d.bg_color || "#0f172a");
     const copyFs = num(d.footer_copy_size, 14);
     const navFs = num(d.footer_nav_size, 14);
+    const ff = d.footer_font_family ? `font-family:${d.footer_font_family};` : "";
 
     const nav = `<nav class="hf-nav" style="color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};justify-content:${toJustify(d.nav_alignment_footer)};font-size:${navFs}px">${items}</nav>`;
     const copy = `<div class="hf-copy" style="color:${d.footer_color};font-weight:${d.footer_weight||'normal'};justify-content:${toJustify(d.footer_alignment)};font-size:${copyFs}px">${d.footer_text||""}</div>`;
@@ -237,8 +244,7 @@
     else if(d.layout_mode === "nav-top") inner = `${nav}${copy}`;
     else inner = `${copy}${nav}`;
     const cls = d.layout_mode === "row" ? "hfbar hf-row" : "hfbar hf-column";
-    const sticky = d.footer_fixed ? "position:sticky;bottom:0;" : "";
-    return `<div class="${cls}" style="${sticky}background:${bg};height:${num(d.bar_height,60)}px;padding:${d.padding||'8px'};--gap:${num(d.link_spacing,16)}px">
+    return `<div class="${cls}" style="${ff}background:${bg};height:${num(d.bar_height,60)}px;padding:${d.padding||'8px 12px'};--gap:${num(d.link_spacing,16)}px">
       ${inner}
     </div>`;
   }
@@ -255,7 +261,7 @@
     header_company_size: Number($("#header_company_size").value),
     nav_alignment: $("#nav_alignment").value,
     nav_color: $("#nav_color").value,
-    nav_weight: $("#nav_weight").value,
+    nav_weight: $("#nav_weight").").value,
     header_nav_size: Number($("#header_nav_size").value),
     bar_height: Number($("#bar_height_header").value),
     padding: $("#padding_header").value,
@@ -263,6 +269,8 @@
     bg_color: $("#bg_color_header").value,
     bg_gradient: $("#bg_gradient_header").value,
     layout_mode: $("#header_layout_mode").value,
+    header_fixed: $("#header_fixed").checked,
+    header_font_family: $("#header_font_family").value,
     area: "header"
   };}
 
@@ -274,17 +282,19 @@
     $("#company_alignment").value = r.company_alignment || "left";
     $("#company_color").value = r.company_color || "#000000";
     $("#company_weight").value = r.company_weight || "normal";
-    $("#header_company_size").value = r.header_company_size ?? 14;
+    $("#header_company_size").value = r.header_company_size ?? 18;
     $("#nav_alignment").value = r.nav_alignment || "right";
-    $("#nav_color").value = r.nav_color || "#000000";
+    $("#nav_color").value = r.nav_color || "#ffffff";
     $("#nav_weight").value = r.nav_weight || "normal";
     $("#header_nav_size").value = r.header_nav_size ?? 14;
     $("#bar_height_header").value = r.bar_height ?? 60;
     $("#padding_header").value = r.padding || "8px 12px";
     $("#link_spacing_header").value = r.link_spacing ?? 16;
-    $("#bg_color_header").value = r.bg_color || "#ffffff";
+    $("#bg_color_header").value = r.bg_color || "#0b1e4a";
     $("#bg_gradient_header").value = r.bg_gradient || "";
     $("#header_layout_mode").value = r.layout_mode || "row";
+    $("#header_fixed").checked = !!r.header_fixed;
+    $("#header_font_family").value = r.header_font_family || '"Noto Sans JP", Meiryo, sans-serif';
     $("#headerPreview").innerHTML = headerHTML(r);
   }
 
@@ -305,26 +315,28 @@
     bg_color: $("#bg_color_footer").value,
     bg_gradient: $("#bg_gradient_footer").value,
     layout_mode: $("#footer_layout_mode").value,
+    footer_font_family: $("#footer_font_family").value,
     area: "footer"
   };}
 
   function setFooter(r){
     $("#footer_text").value = r.footer_text || "";
     $("#footer_alignment").value = r.footer_alignment || "center";
-    $("#footer_color").value = r.footer_color || "#000000";
+    $("#footer_color").value = r.footer_color || "#ffffff";
     $("#footer_weight").value = r.footer_weight || "normal";
     $("#footer_copy_size").value = r.footer_copy_size ?? 14;
     $("#nav_alignment_footer").value = r.nav_alignment_footer || "center";
-    $("#nav_color_footer").value = r.nav_color_footer || "#000000";
+    $("#nav_color_footer").value = r.nav_color_footer || "#ffffff";
     $("#nav_weight_footer").value = r.nav_weight_footer || "normal";
     $("#footer_nav_size").value = r.footer_nav_size ?? 14;
     $("#footer_fixed").checked = !!r.footer_fixed;
     $("#bar_height_footer").value = r.bar_height ?? 60;
     $("#padding_footer").value = r.padding || "8px 12px";
     $("#link_spacing_footer").value = r.link_spacing ?? 16;
-    $("#bg_color_footer").value = r.bg_color || "#ffffff";
+    $("#bg_color_footer").value = r.bg_color || "#0b1e4a";
     $("#bg_gradient_footer").value = r.bg_gradient || "";
     $("#footer_layout_mode").value = r.layout_mode || "row";
+    $("#footer_font_family").value = r.footer_font_family || '"Noto Sans JP", Meiryo, sans-serif';
     $("#footerPreview").innerHTML = footerHTML(r);
   }
 
